--- a/cmd/reboot/Makefile
+++ b/cmd/reboot/Makefile
@@ -55,6 +55,8 @@ stdlib.o \
 string.o \
 time.o \
 unistd.o \
+termios.o \
+ioctl.o \
 stubs.o    
 
 
@@ -70,9 +72,9 @@ main.o:
 all-c:
 
 	cp $(LIBCOBJ)/crt0.o   .
-	
 	cp $(LIBCOBJ)/stubs.o  .
-	
+
+
 	cp $(LIBCOBJ)/ctype.o   .
 	cp $(LIBCOBJ)/stdio.o .
 	cp $(LIBCOBJ)/stdlib.o .
@@ -80,8 +82,8 @@ all-c:
 	cp $(LIBCOBJ)/time.o    .
 	cp $(LIBCOBJ)/unistd.o  .
 
-#	cp $(APIOBJ)/api.o      .
-
+	cp $(LIBCOBJ)/termios.o  .
+	cp $(LIBCOBJ)/ioctl.o  .
 
 
 jackpot-link:
